fix figure overflow

--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -93,6 +93,9 @@ img
   user-select: none
   -webkit-user-drag: none
 
+figure
+  max-width: 100%
+
 h1, h2, h3, h4
   text-wrap: balance
 
